# VideoForgeBot

./: .env.example  .gitignore  .replit  BOTFATHER_SETUP_GUIDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  RAILWAY_TROUBLESHOOTING.md  deploy.sh  docker-compose.yml  env.template  main.py  nginx.conf  pyproject.toml  replit.md  requirements.txt  setup_env.sh  test_admin_credits.py  user_credits.json  video-forge-bot.service  web_interface.html  web_server.py
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: content-1758917273726.md
