[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiogram>=3.22.0",
    "aiohttp>=3.12.15",
    "cryptography>=46.0.1",
    "flask>=3.1.2",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
]
